...
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <android.widget.SearchView
            android:id="@+id/searchTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:queryHint="Search titles"
            android:iconifiedByDefault="false"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
...
